# yAlgo

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.md  YuLibInstall.cmake  YuMakeApp.cmake  YuMakeSDK.cmake  YuPath.cmake  yutils.cmake
cmake/templates/: earth_app_version.rc.in  earth_sdk_version.rc.in  log_app_version.rc.in  log_sdk_version.rc.in  log_version.rc.in  math_app_version.rc.in  math_sdk_version.rc.in  utils_app_version.rc.in  utils_sdk_version.rc.in  version.rc.in
doc/: howtouse.md
examples/earth/: CMakeLists.txt  earth_example.cpp  earth_test.cpp  earth_test.h
examples/log/: CMakeLists.txt  log_example.cpp  log_test.cpp  log_test.h
examples/log_example/: CMakeLists.txt  log_example.cpp
examples/math/: CMakeLists.txt  math_example.cpp  math_test.cpp  math_test.h
examples/utils/: CMakeLists.txt  utils_example.cpp  utils_test.cpp  utils_test.h
resources/: log_example_version.in  yutils_log_version.in
sdk/: CMakeLists.txt
sdk/earth/: CMakeLists.txt  earth_converter.cpp  earth_converter.h  earth_exports.h  earth_geometry.cpp  earth_geometry.h  earth_point.cpp  earth_point.h  version.h
sdk/log/: CMakeLists.txt  async_logger.cpp  async_logger.h  log_exports.h  logger.h  version.h
sdk/math/: CMakeLists.txt  math_exports.h  math_utils.cpp  math_utils.h  version.h
sdk/utils/: CMakeLists.txt  exec_path_utils.cpp  exec_path_utils.h  utils_exports.h
